# Stellarsat-1

./: README.md
BoiraS/: README.md  install.sh  requirements.txt
ESP/: .gitignore  CMakeLists.txt  README.md
ESP/components/libcorrect/: CMakeLists.txt
ESP/components/libcorrect/src/convolutional/: history_buffer.c
ESP/main/: CMakeLists.txt  Stellarsat-frames.c  Stellarsat-frames.h  Stellarsat-measure.h  Stellarsat_measure.txt  lora.h  main.c
src/: main.c  main2.c  programa
